# sochi-blocks

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  P1-01-6 Solution Data Import Runbook.md  P1‑06 GeminiCLI Runbook.md  README.md  Roadmap.md  SoChi BLOCKS インポートデバッグ.md  SoChi BLOCKS プロジェクト安定稼働のための具体的な修正ポイント.md  SoChi BLOCKS プロジェクト安定稼働のための包括的方針（GeminiCLI用）.md  Vision.md  alembic.ini  chema) add core foundation DDL (P1-01-2)  commit_message.txt  pyproject.toml  pytest.ini  test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
backend/: app.py
backend/models/: base.py  content_puzzle.py  content_puzzle_cell.py  master_base_puzzle.py  master_base_puzzle_cell.py  master_difficulty.py  master_piece.py  master_puzzle_type.py  master_user.py
backend/scripts/: solution_data_import.py
db/: schema.sql
db/migrations/: README.md  env.py
docs/: index.html  viewer.html
docs/assets/: index-28Ct_L6N.js  index-9tbJaHU5.css  index-B7fpIiMR.css  index-BFa0cNgV.js  index-BQ8we1Fx.css  index-BwM0J4Da.css  index-CFWugl1K.js  index-COd7bjnk.css  index-CP-Evpw2.js  index-CPOWW5ZC.js  index-CQjOygEa.css  index-DJ0yPVSQ.js  index-DJxSVS5z.js  index-DRdnVKIN.css  index-DySnaFHP.css  index-ES5A32qB.js  index-J7ccMzu0.js  index-RF7u1knB.css  viewer-7LZToyXF.css  viewer-C8Ix22kN.css  viewer-CDVreFJS.js  viewer-D92To6Vq.js  viewer-DEsrmEwv.js  viewer-VJbZ36Hv.css
frontend/: package.json  viewer.html  vite.config.ts
scripts/: auto_publish.py  generate_instagram_images.py  publish_puzzle.py
(+60 files in other folders)
